src/test/ui/impl-trait/universal-mismatched-type.stderr
error[E0308]: mismatched types
  --> $DIR/universal-mismatched-type.rs:16:5
   |
15 | fn foo(x: impl Debug) -> String {
   |                          ------ expected `std::string::String` because of return type
16 |     x //~ ERROR mismatched types
   |     ^ expected struct `std::string::String`, found type parameter
   |
   = note: expected type `std::string::String`
              found type `impl Debug`

error: aborting due to previous error

